@@ -1,3 +1,14 @@
+2021-08-04  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        Add missing null-check in Touch constructor
+        https://bugs.webkit.org/show_bug.cgi?id=228231
+
+        Reviewed by Darin Adler.
+
+        * dom/Touch.cpp:
+        (WebCore::scaledLocation): Helper to initialize absolutePosition.
+        (WebCore::Touch::Touch): Use scaledLocation().
+
 2021-08-03  Alexey Shvayka  <shvaikalesh@gmail.com>
 
         ReadableStream's pipeTo() and pipeThrough() don't properly check for AbortSignal
